<resources>
    <string name="app_name">StocTeky</string>
    <!-- Mensagens de erro -->
    <string name="invalid_name">Nome deve ter pelo menos 3 caracteres</string>
    <string name="empyt_list">Nenhum resgisto encontrado</string>
    <string name="invalid_password">Senha deve ter pelo menos 8 caracteres</string>
    <string name="password_not_equal">Senha e confirmar senha devem ser iguais.</string>
    <string name="invalid_email">E-mail inválido</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stoc Teky</string>
    <string name="nav_header_subtitle" translatable="false" />
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Painel Operacional</string>
    <string name="already_has_account">Já tem uma conta? <b>Faça Login</b></string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_setting">Gestão de Conta</string>
    <string name="todo">Todo\n\n</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="senha">Password</string>
    <string name="entrar">Entrar</string>
    <string name="ainda_n_o_cadastrado_cadastre_se">Ainda não é cadastrado? <b>Cadastre-se.</b></string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="login_with_google">Fazer login com Google</string>
    <string name="e_mail">E-mail</string>
    <string name="next">Continuar</string>
    <string name="menu_share">Compartilhar Aplicativo</string>
    <string name="search">Pesquisar</string>
    <string name="name">Nome\n</string>
    <string name="password">Senha\n</string>
    <string name="password_confirme">Confirme senha</string>
    <string name="continui">Continuar\n</string>
    <string name="menu_login">login\n</string>
    <string name="email_cadaster">Digite seu endereço de e-mail.</string>
    <string name="vamos_comesar">Vamos começar! 1/3</string>
    <string name="quase_la">Quase lá! 2/3</string>
    <string name="created_passworde_acess">Agora, informe seu nome completo e crie sua senha.</string>

    <string name="agree_terms_policy">Ao clicar em Entrar, você concorda com nossos
<b>Termos de Uso e Privacidade.</b></string>
    <string name="next_av">Avançar</string>
    <string name="more">Outros\n</string>
    <string name="finish_screen" translatable="false">Encerrar Sessão</string>
    <string name="menu_helper_alerta" translatable="false">Gestão de Alertas</string>
    <string name="print" translatable="false">Print</string>
    <string name="stockup" translatable="false">Estoque Alto</string>
    <string name="stockdonw" translatable="false">Estoque Baixo</string>

    <string name="previwstock" translatable="false">Previsão de Fim de Estoque</string>
    <string name="productexpiration" translatable="false">Produtos em Vencimento</string>
    <string name="supplierpromotions" translatable="false">Promoções de Fornecedores</string>
    <string name="stockoutput" translatable="false">Saída de Estoque</string>
    <string name="donation" translatable="false">Sugestão de Doação de Estoque</string>
    <string name="replacement" translatable="false">Sugestão de Reposição</string>
    <string name="rental" translatable="false">Vencimento de Locação</string>
    <string name="user_not_faund" translatable="false">Usuario não encontrado</string>
    <string name="gestao" translatable="false">Gestão de Campos</string>
    <string name="email_ja_cadastrado" translatable="false">E-mail já cadastrado</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menu_gestao" translatable="false">Gestao de Campos</string>
    <string name="password_error" translatable="false">Incorrect password!</string>
    <string name="onegestao" translatable="false">Código de Barras</string>
    <string name="twogestao" translatable="false">Dimensões</string>
    <string name="threegestao" translatable="false">Peso</string>
    <string name="fourgestao" translatable="false">Setor</string>
    <string name="fivegestao" translatable="false">Validade</string>
    <string name="sixgestao" translatable="false">Custo</string>
    <string name="sevengestao" translatable="false">Armazém</string>
    <string name="campos_a_exibir_financeiro" translatable="false">Campos a Exibir / Financeiro</string>
    <string name="eightgestao" translatable="false">Produto</string>
    <string name="ninegestao" translatable="false">Valor</string>
    <string name="tengestao" translatable="false">Status</string>
    <string name="elevengestao" translatable="false">CNPJ</string>
    <string name="campos_a_exibir_fornecedor" translatable="false">Campos a Exibir / Fornecedor</string>
    <string name="twelvegestao" translatable="false">E-mail</string>
    <string name="thirteengestao" translatable="false">WhatsApp</string>
    <string name="fourtenngestao" translatable="false">Telefone</string>
    <string name="fifteenestao" translatable="false">Endereço</string>
    <string name="campos_a_exibir_locacao" translatable="false">Campos a Exibir / Locação</string>
    <string name="onerental" translatable="false">Data de Retirada</string>
    <string name="tworental" translatable="false">Data de Devolução</string>
    <string name="threerental" translatable="false">Quantidade</string>
    <string name="fourrental" translatable="false">Código de Barras</string>
    <string name="fiftrental" translatable="false">Dimensões</string>
    <string name="sixrental" translatable="false">Peso</string>
    <string name="sevenrental" translatable="false">Sector</string>
    <string name="eightrental" translatable="false">Validate</string>
    <string name="ninerental" translatable="false">Custo</string>
    <string name="tenrental" translatable="false">Armada</string>
    <string name="campos_a_exibir_promocoes" translatable="false"> Campos a Exhibit / Promises</string>
    <string name="sixteengestao" translatable="false">OCPJP</string>
    <string name="seventenngestao" translatable="false">WhatsApp</string>
    <string name="eighteengestao" translatable="false">Telephone</string>
    <string name="nineteengestao" translatable="false">E-mail</string>
    <string name="twentynestao" translatable="false">Endereço</string>
    <!--510334309711-el6csopijqpftqneqdb6esjk7q626o9a.apps.googleusercontent.com-->
    <!--510334309711-r6krqgnliudko0c96cjp3d8p121pf71r.apps.googleusercontent.com-->
    <string name="default_web_client_id" translatable="false">510334309711-r6krqgnliudko0c96cjp3d8p121pf71r.apps.googleusercontent.com</string>
    <string name="seu_e_mail" translatable="false"><b>Seu email</b></string>
    <string name="message_reset_password" translatable="false"> Informe seu e-mail e receba um link para redefinir sua senha.</string>
    <string name="txt_msg_reset_password" translatable="false">Esqueci minha senha</string>
    <string name="send" translatable="false">Enviar</string>
    <string name="error_in" translatable="false">Erro de servidor.</string>
    <string name="email_not_found" translatable="false">E-mail não emcontrado.</string>
    <string name="send_sussce" translatable="false">Email enviado com sucesso verifique sua caixa de entrada</string>
    <string name="welcome_to_my_app" translatable="true"><b>Welcome! %1$s</b></string>
    <string name="menu_gestao_campos" translatable="false">Field management</string>
    <string name="instock">Estoque</string>
</resources>