<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressbar_login"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:elevation="2dp"
                android:indeterminateTint="@color/blue"
                android:indeterminateTintMode="src_in"
                android:visibility="gone"
                android:layout_marginBottom="128dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/logapp" />
                <!-- Campo de Email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_edit_email_input"
                    style="@style/Theme.MyApplication.FormEditTextInput"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/login_edit_email"
                        style="@style/Theme.MyApplication.FormEdit_Text"
                        android:autofillHints="@null"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Campo de Senha -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_edit_password_input"
                    style="@style/Theme.MyApplication.FormEditTextInput"
                    app:endIconDrawable="@drawable/ic_visibility_off_24"
                    app:endIconMode="password_toggle"
                    app:hintEnabled="false">
                    <EditText
                        android:id="@+id/login_edit_password"
                        style="@style/Theme.MyApplication.FormEdit_Text"
                        android:autofillHints="@null"
                        android:inputType="textPassword"
                        android:hint="@string/password"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="0dp"
                    android:text="@string/esqueceu_a_senha"
                    android:textColor="@color/blue" />

                <!-- Botão de Login -->
                <Button
                    android:id="@+id/login_btn_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="@color/orange"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:padding="12dp"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:text="@string/entrar"
                    android:textColor="@color/white" />

                <!-- Botão de Login com Google -->

                <Button
                    android:id="@+id/btnGoogleLogin"
                    style="@style/Theme.MyApplication.Button"
                    android:drawableLeft="@drawable/button_icon_text"
                    android:text="@string/login_with_google"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/login_txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/ainda_n_o_cadastrado_cadastre_se"
                    android:textColor="@color/blue" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>