<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_height="match_parent">
    <!-- 1º  -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">
        <!-- 2º  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressbar_email_and_password"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="70dp"
            android:elevation="2dp"
            android:indeterminateTint="@color/blue"
            android:indeterminateTintMode="src_in"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:paddingBottom="40dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/quase_la"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/login_img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:text="@string/created_passworde_acess"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle=""

                />
            <!-- 3º  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_name_input"
                style="@style/Theme.MyApplication.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_name"
                    style="@style/Theme.MyApplication.FormEdit_Text"
                    android:autofillHints="@null"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- 4º  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_password_input"
                style="@style/Theme.MyApplication.FormEditTextInput"
                app:endIconDrawable="@drawable/ic_visibility_off_24"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_password"
                    style="@style/Theme.MyApplication.FormEdit_Text"
                    android:autofillHints="password"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- 5º  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_confirme_input"
                style="@style/Theme.MyApplication.FormEditTextInput"
                app:endIconDrawable="@drawable/ic_visibility_off_24"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_comfirme"
                    style="@style/Theme.MyApplication.FormEdit_Text"
                    android:autofillHints="@null"
                    android:hint="@string/password_confirme"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- 6º  -->
            <Button
                android:id="@+id/register_btn_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/orange"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/register_txt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/register_txt_login"
        style="@style/Theme.MyApplication.TextViewBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/white"
        android:padding="20dp"
        android:text="@string/already_has_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>