<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.rogger.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_helper"
        android:name="com.rogger.myapplication.ui.helper.HelperFragment"
        android:label="@string/menu_helper_alerta"
        tools:layout="@layout/fragment_helper" />
    <fragment
        android:id="@+id/nav_gestao"
        android:name="com.rogger.myapplication.ui.gestao.view.FragmentGestao"
        android:label="@string/menu_gestao_campos"
        tools:layout="@layout/fragment_gestao" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.rogger.myapplication.ui.setting.view.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment android:id="@+id/nav_register_name_password"
        android:name="com.rogger.myapplication.ui.register.view.RegisterNamePasswordFragment"
        android:label="RegisterNamePasswordFragment"
        tools:layout="@layout/fragment_register_name_password" />

    <fragment android:id="@+id/nav_register_email_fragment"
        android:name="com.rogger.myapplication.ui.register.view.RegisterEmailFragment"
        android:label="RegisterEmailFragment"
        tools:layout="@layout/fragment_register_email" />

    <fragment android:id="@+id/nav_wecome"
        android:name="com.rogger.myapplication.ui.register.view.RegisterWelcomeFragment"
        android:label="WelcomeFragment"
        tools:layout="@layout/fragment_register_welcome" />
    <activity
        android:id="@+id/splashActivity"
        android:name="com.rogger.myapplication.ui.splashScreen.view.SplashActivity"
        android:label="activity_splash"
        tools:layout="@layout/activity_splash" />

    <!--   Fragmentos da home  -->
    <fragment
        android:id="@+id/nav_estoque"
        android:name="com.rogger.myapplication.ui.home.module.StockFragment"
        android:label="Estoque"
        tools:layout="@layout/fragment_stock" />
    <fragment
        android:id="@+id/nav_fornecedores"
        android:name="com.rogger.myapplication.ui.home.module.SupplierFragment"
        android:label="Fornecedores"
        tools:layout="@layout/fragment_supplier" />
    <fragment
        android:id="@+id/nav_notas"
        android:name="com.rogger.myapplication.ui.home.module.InvoicesFragment"
        android:label="Notas Fiscais"
        tools:layout="@layout/fragment_invoices" />
    <fragment
        android:id="@+id/nav_relatorios"
        android:name="com.rogger.myapplication.ui.home.module.ReportFragment"
        android:label="Relatórios"
        tools:layout="@layout/fragment_report" />
    <fragment
        android:id="@+id/nav_financeiro"
        android:name="com.rogger.myapplication.ui.home.module.FinancialFragment"
        android:label="Financeiro"
        tools:layout="@layout/fragment_financial" />
    <fragment
        android:id="@+id/nav_locacao"
        android:name="com.rogger.myapplication.ui.home.module.LocationFragment"
        android:label="Locação"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/nav_promocoes"
        android:name="com.rogger.myapplication.ui.home.module.PromotionFragment"
        android:label="Promoções e ONG's"
        tools:layout="@layout/fragment_promotion" />
    <fragment
        android:id="@+id/nav_outomacao"
        android:name="com.rogger.myapplication.ui.home.module.OutmationFragment"
        android:label="Automação"
        tools:layout="@layout/fragment_outmation" />


</navigation>